Issue 334: code mirror overlap / component scaling  (#343)
* fix edge networking

* fix edge networking

* ver

* reindent package

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -70,3 +70,13 @@ a.tile:is(:link, :visited, :hover, :active) {
 .alignItemsCenter {
   align-items: center;
 }
+
+.edgeFormWidth {
+  width: 95%;
+}
+
+@media screen and (max-width: 1024px) {
+  .displayFlex.edgeFormWidth {
+    flex-direction: column; // place in column when width small
+  }
+}
